Bug 602794. nsPresContext::IsRootContentDocument is wrong for the embedding situation. r=bzbarsky a=dbaron